<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.markwesterlund.ribbit.MainActivity$PlaceholderFragment"
    android:orientation="vertical" >

    

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
           
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" 
            android:layout_height="0dip" 
     		android:layout_weight="1"
            >

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/inbox_vertical_margin" >
            </ListView>
        </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_inbox_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:background="@color/white_background" 
        android:layout_weight="0">

        <TextView
            android:id="@+id/charCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/message_count" />

        <EditText
            android:id="@+id/messageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/message_hint"
            android:inputType="textCapSentences|textAutoCorrect" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message" />
    </LinearLayout>

</LinearLayout>